final after tutor

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
     <h1>Weather</h1>
 
   </header>
-
+<section>
   <div>
     <label for="weather-input">choose a city</label>
     <input type="text" id="weather-input">
     <button id="start-weather">display weather</button>
+    <ul class = "history-list">
+
+    </ul>
   </div>
+  <div class = "main-weather">
+
+  </div>
+</section>
   <div class="card-body">
 
   </div>
